# pyramid-tinyurl-doodle

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Pipfile  README.branch  README.branch.md  README.docker  README.md  README.pip-compile-broken  README.recaptcha.md  README.secrets.txt  README.txt  TODO.md  TROUBLE.md  Vagrantfile  app.py  application.py  backfill.py  batch-up-backup.py  cloudfront-notes.md  cutover.txt  default.conf  dev-requirements.in  dev-requirements.txt  development.ini  docker-compose.yml  docker-start.text  etc-nginx-nginx.conf  hack.el  heroku.txt  justfile  nginx-default.conf  nginx-notes.md  nginx.conf  nginx.default  nginx.default-mit-extra-django.conf  post-mortem  production.ini  pyproject.toml  (+11 more)
.chalice/: config.json
.sandstorm/: build.sh  launcher.sh  sandstorm-files.list  sandstorm-pkgdef.capnp
app/: converters.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
app/management/commands/: backup-db-to-s3.py  snarf-ddb-data.py  sync-ddb-data.py
app/migrations/: 0001_initial.py  0002_shortenedurl_created_at.py  0003_alter_shortenedurl_short.py  0004_alter_shortenedurl_created_at.py  0005_alter_shortenedurl_original.py
app/templates/: homepage.html  recaptcha_fail.html
chalicelib/: db.py  home.stache  render.py  wat.mak  wat.stache
git/: post-checkout
module/: database.py  dynamo.py  hashes.py  test_database.py  test_hashes.py
nginx/: README.md  etc-nginx-nginx.conf  nginx.default-mit-extra-django.conf
nginx/suggested-tls-conf/: intermediate  modern
project/: base_settings.py  dev_settings.py  prod_settings.py  settings.py  urls.py  wsgi.py
ssl-thoughts/: aws-network-load-balancers.md  letsencrypt.md
tinyurl/: MANIFEST.in  README.txt  __init__.py  auth.py  helpers.py  models.py  recaptcha_client.py  tests.py  views.py
tinyurl/db/: database.py  dynamo.py  hashes.py  test_database.py
tinyurl/integ-tests/: test_database.py
tinyurl/module/: database.py  dynamo.py  hashes.py  test_database.py  test_hashes.py
tinyurl/scripts/: initializedb.py
tinyurl/static/: theme.css
tinyurl/templates/: create.pt  homepage.mak  homepage.pt  mytemplate.pt  raw_table.mak
tinyurl/tests/: test_304_view.py  test_auth.py  test_database.py  test_hashes.py  test_helpers.py  test_views.py
tinyurl/tinyurl/: tests.py
