[tool.poetry]
name = "tinyurl"
version = "0.1.0"
description = ""
authors = ["Eric Hanchrow <eric.hanchrow@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.0.7"
requests = "^2.32.3"
platformdirs = "^4.2.2"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.140"
django-debug-toolbar = "^4.4.5"
django-extensions = "^3.2.3"
pytest-django = "^4.8.0"
tqdm = "^4.66.4"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.dev_settings"
# -- recommended but optional:
python_files = ["tests.py", "test_*.py", "*_test.py", "testing/python/*.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
